# gpt-orbit

./: .gitignore  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
docs/acceptance/: gpt-orbit-windows-matrix.md  release-manifest.md
docs/plans/: 2026-07-12-codex-orbit-mvp.md
docs/releases/: v0.1.0.md
docs/social/: gpt-orbit-launch-copy.md
scripts/acceptance/: capture-widget.ps1  verify-window.ps1
scripts/release/: check-public-tree.ps1  check-release-workflow.ps1  validate-release-workflow.mjs  validate-release-workflow.node.mjs
scripts/social/: render_covers.py
src/: App.integration.test.tsx  App.test.tsx  App.tsx  appVariant.test.ts  appVariant.ts  main.tsx  weeklyBundleIsolation.test.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.weekly.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/backend/: account.rs  cache.rs  codex_executable.rs  error.rs  mod.rs  process.rs  protocol.rs  rate_limits.rs  reset_credit_service.rs  reset_credits.rs  rpc.rs  service.rs  supervisor.rs
src-tauri/src/desktop/: app_variant.rs  compact_window.rs  lifecycle.rs  mod.rs  preferences.rs  session_unlock.rs  tray.rs
src-tauri/tests/: app_server_flow.rs  desktop_lifecycle.rs  gpt_orbit_integration.rs  reset_credit_flow.rs  tray_actions.rs  widget_placement.rs
src/app/: AppShell.tsx  StandardApp.tsx  WeeklyApp.tsx
tests/fake-app-server/: server.mjs
(+41 files in other folders)
