[package]
name = "codex-orbit"
version = "0.1.0"
description = "Codex Orbit desktop quota widget"
authors = ["Codex Orbit contributors"]
edition = "2021"
default-run = "codex-orbit"

[lib]
name = "codex_orbit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
thiserror = "2"
tokio = { version = "1", features = ["fs", "process", "io-util", "sync", "time", "macros", "test-util"] }
tracing = "0.1"
url = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_RemoteDesktop",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
